--- a/client/index.html
+++ b/client/index.html
@@ -7,33 +7,92 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <title>Workout Log</title>
-  <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-<script src="./bower_components/jquery/dist/jquery.min.js"></script>
-<!-- Include all compiled plugins (below), or include individual files as needed -->
-<script src="./bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+
+  <link href="./bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
 
 </head>
 
 <body>
-  <ul class="nav nav-tabs">
-    <li class="active"><a href="#home" data-toggle="tab">Home</a></li>
-    <li><a href="#define" data-toggle="tab">Define</a></li>
-    <li><a href="#log" data-toggle="tab">Log</a></li>
-    <li><a href="#history" data-toggle="tab">View History</a></li>
-    <li><a href="#" id="testAPI">Test API</a></li>
-
-  </ul>
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <ul class="nav nav-tabs">
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup"
+        aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+        <div class="navbar-nav">
+          <li>
+            <a href="#home" id="loginout" class="disabled nav-item nav-link" data-toggle="tab">Login</a>
+            <li class="active">
+              <a href="#home" class="nav-item nav-link" data-toggle="tab">Home</a>
+            </li>
+            <li>
+              <a href="#define" class="nav-item nav-link" data-toggle="tab">Define</a>
+            </li>
+            <li>
+              <a href="#log" class="nav-item nav-link" data-toggle="tab">Log</a>
+            </li>
+            <li>
+              <a href="#history" class="nav-item nav-link" data-toggle="tab">View History</a>
+            </li>
+            <li>
+              <a href="#" id="testAPI" class="nav-item nav-link">Test API</a>
+            </li>
+        </div>
+      </div>
+    </ul>
+  </nav>
 
   <div class="container">
     <div class="tab-content">
       <div class="tab-pane active" id="home">
-        <h2>Hello Workout Log!</h2>
+        <h2>Workout Log</h2>
+        <div id="forLogin">
+          <button data-toggle="modal" data-target="#login-modal" class="btn btn-primary">Login</button>
+          <button data-toggle="modal" data-target="#signup-modal" class="btn btn-primary">Sign Up</button>
+        </div>
+        <div id="forLogout" style="display:none;">
+          <button class="btn btn-primary">Logout</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!--Login Modal-->
+  <div class="modal fade" id="login-modal" role="dialog">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+          <h4 class="modal-title">Login</h4>
+        </div>
+        <div class="modal-body">
+          <div class="alert alert-danger" style="display: none;" role="alert" id="li_error"></div>
+          <label for="li_username">Username:</label>
+          <input id="li_username" />
+          <label for="li_password">Password:</label>
+          <input type="password" id="li_password" />
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+          <button id="login" type="button" class="btn btn-primary">Login</button>
+        </div>
       </div>
     </div>
   </div>
 
 
-  <script src="app.js"></script>
+
+
+
+  <!-- jQuery (necessary for Bootstrap's JavaScript plugins)-->
+  <script src="./bower_components/jquery/dist/jquery.min.js"></script>
+  <!-- Include all compiled plugins (below), or include individual files as needed -->
+  <script src="./bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+
+  <script src="./app.js"></script>
 </body>
 
 </html>
