--- a/client/index.html
+++ b/client/index.html
@@ -14,13 +14,13 @@
 
 <body>
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <ul class="nav nav-tabs">
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup"
-        aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-        <div class="navbar-nav">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup"
+      aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+      <div class="navbar-nav">
+        <ul class="nav nav-tabs">
           <li>
             <a href="#home" id="loginout" class="disabled nav-item nav-link" data-toggle="tab">Login</a>
             <li class="active">
@@ -38,8 +38,8 @@
             <li>
               <a href="#" id="testAPI" class="nav-item nav-link">Test API</a>
             </li>
-        </div>
       </div>
+    </div>
     </ul>
   </nav>
 
@@ -57,69 +57,88 @@
       </div>
       <!-- DEFINE -->
       <div class="tab-pane" id="define">
-          <h2>Define</h2>
-            <label for="def-description">Description</label>
-            <textarea class="form-control" id="def-description" rows="3" ></textarea>
-            <label for="def-logtype">Log work by</label>
-            <select class="form-control" id="def-logtype">
-              <option>Time</option>
-              <option>Weight</option>
-              <option>Reps</option>
-            </select>
-            <button id="def-save" class="btn btn-primary">Save</button>
+        <h2>Define</h2>
+        <label for="def-description">Description</label>
+        <textarea class="form-control" id="def-description" rows="3"></textarea>
+        <label for="def-logtype">Log work by</label>
+        <select class="form-control" id="def-logtype">
+          <option>Time</option>
+          <option>Weight</option>
+          <option>Reps</option>
+        </select>
+        <button id="def-save" class="btn btn-primary">Save</button>
+      </div>
+      <!--Log-->
+      <div class="tab-pane" id="log">
+        <h2>log!</h2>
+        <label>Result</label>
+        <input type="text" class="form-control" id="log-result" />
+        <label>Workout Select:</label>
+        <select class="form-control" id="log-definition">
+        </select>
+        <label>notes</label>
+        <textarea class="form-control" id="log-description" rows="3"></textarea>
+        <button id="log-save" class="btn btn-primary">Save</button>
+      </div>
+      <div class="tab-pane" id="history">
+        <h2>History</h2>
+        <ul class="list-group" id="history-list">
+        </ul>
+      </div>
+    </div>
+
+
+    <!--Login Modal-->
+    <div class="modal fade" id="login-modal" role="dialog">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+            <h4 class="modal-title">Login</h4>
+          </div>
+          <div class="modal-body">
+            <div class="alert alert-danger" style="display: none;" role="alert" id="li_error"></div>
+            <label for="li_username">Username:</label>
+            <input id="li_username" />
+            <label for="li_password">Password:</label>
+            <input type="password" id="li_password" />
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+            <button id="login" type="button" class="btn btn-primary">Login</button>
+          </div>
         </div>
       </div>
     </div>
 
-  <!--Login Modal-->
-  <div class="modal fade" id="login-modal" role="dialog">
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="modal-header">
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-          </button>
-          <h4 class="modal-title">Login</h4>
-        </div>
-        <div class="modal-body">
-          <div class="alert alert-danger" style="display: none;" role="alert" id="li_error"></div>
-          <label for="li_username">Username:</label>
-          <input id="li_username" />
-          <label for="li_password">Password:</label>
-          <input type="password" id="li_password" />
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-          <button id="login" type="button" class="btn btn-primary">Login</button>
+    <!--sign up-->
+    <div class="modal fade" id="signup-modal" role="dialog">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+            <h4 class="modal-title">Sign Up</h4>
+          </div>
+          <div class="modal-body">
+            <div class="alert alert-danger" role="alert" style="display:none;" id="su_error"></div>
+            <label for="su_username">Username:</label>
+            <input id="su_username" />
+            <label for="su_password">Password:</label>
+            <input type="password" id="su_password" />
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+            <button id="signup" type="button" class="btn btn-primary">Signup</button>
+          </div>
         </div>
       </div>
     </div>
   </div>
 
-  <!--sign up-->
-  <div class="modal fade" id="signup-modal" role="dialog">
-      <div class="modal-dialog">
-        <div class="modal-content">
-          <div class="modal-header">
-           <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-           <h4 class="modal-title">Sign Up</h4>
-         </div>
-         <div class="modal-body">
-         <div class="alert alert-danger" role="alert" style="display:none;" id="su_error"></div>
-           <label for="su_username">Username:</label>
-           <input id="su_username" />
-           <label for="su_password">Password:</label>
-           <input type="password" id="su_password" />
-         </div>
-         <div class="modal-footer">
-           <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-           <button id="signup" type="button" class="btn btn-primary">Signup</button>
-         </div>
-        </div>
-      </div>
-    </div>
-   </div>
-   
 
 
 
@@ -132,6 +151,7 @@
   <script src="./app.js"></script>
   <script src="./user/auth.js"></script>
   <script src="./workouts/define.js"></script>
+  <script src="./workouts/log.js"></script>
 </body>
 
 </html>
