--- a/client/index.html
+++ b/client/index.html
@@ -45,7 +45,7 @@
 
   <div class="container">
     <div class="tab-content">
-      <div class="tab-pane active" id="home">
+      <div class="tab-pane fade" id="home">
         <h2>Workout Log</h2>
         <div id="forLogin">
           <button data-toggle="modal" data-target="#login-modal" class="btn btn-primary">Login</button>
@@ -56,7 +56,7 @@
         </div>
       </div>
       <!-- DEFINE -->
-      <div class="tab-pane" id="define">
+      <div class="tab-pane fade" id="define">
         <h2>Define</h2>
         <label for="def-description">Description</label>
         <textarea class="form-control" id="def-description" rows="3"></textarea>
@@ -69,7 +69,7 @@
         <button id="def-save" class="btn btn-primary">Save</button>
       </div>
       <!--Log-->
-      <div class="tab-pane" id="log">
+      <div class="tab-pane fade" id="log">
         <h2>log!</h2>
         <label>Result</label>
         <input type="text" class="form-control" id="log-result" />
@@ -80,7 +80,7 @@
         <textarea class="form-control" id="log-description" rows="3"></textarea>
         <button id="log-save" class="btn btn-primary">Save</button>
       </div>
-      <div class="tab-pane" id="history">
+      <div class="tab-pane fade" id="history">
         <h2>History</h2>
         <ul class="list-group" id="history-list">
         </ul>
