--- a/client/index.html
+++ b/client/index.html
@@ -38,6 +38,7 @@
             <li>
               <a href="#" id="testAPI" class="nav-item nav-link">Test API</a>
             </li>
+            <a href="#update-log" data-toggle="tab" class="disabled" type="hidden"></a>
       </div>
     </div>
     </ul>
@@ -80,6 +81,22 @@
         <textarea class="form-control" id="log-description" rows="3"></textarea>
         <button id="log-save" class="btn btn-primary">Save</button>
       </div>
+      
+      <!--UPDATING A WORKOUT SECTION-->
+      <div class="tab-pane fade" id="update-log">
+          <h2>Log Update</h2>
+          <label>Result</label>
+          <input type="hidden" class="form-control" id="update-id" />
+          <input type="text" class="form-control" id="update-result" />
+          <label>Workout Select:</label>
+          <select class="form-control" id="update-definition">
+          </select>
+          <label>notes</label>
+          <textarea class="form-control" id="update-description" rows="3"></textarea>
+          <br />
+          <button id="log-update" class="btn btn-primary">Save</button>
+        </div>
+      
       <div class="tab-pane fade" id="history">
         <h2>History</h2>
         <ul class="list-group" id="history-list">
