--- a/client/index.html
+++ b/client/index.html
@@ -103,6 +103,7 @@
         </ul>
       </div>
     </div>
+  </div>
 
 
     <!--Login Modal-->
@@ -131,7 +132,7 @@
     </div>
 
     <!--sign up-->
-    <div class="modal fade" id="signup-modal" role="dialog">
+  <div class="modal fade" id="signup-modal" role="dialog">
       <div class="modal-dialog">
         <div class="modal-content">
           <div class="modal-header">
